--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-ionicons": "^4.2.1",
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
