--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-ionicons": "^4.2.1",
-    "react-router-dom": "^6.24.0"
+    "react-router-dom": "^6.24.0",
+    "sweetalert2": "^11.12.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
