--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.52.1",
     "react-ionicons": "^4.2.1",
     "react-router-dom": "^6.24.0",
+    "react-toastify": "^10.0.5",
     "sweetalert2": "^11.12.1"
   },
   "devDependencies": {
