--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-ionicons": "^4.2.1",
     "react-router-dom": "^6.24.0",
     "react-toastify": "^10.0.5",
-    "sweetalert2": "^11.12.1"
+    "sweetalert2": "^11.12.1",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
