--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.2",
+    "@react-pdf/renderer": "^3.4.4",
     "@tanstack/react-query": "^5.48.0",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.12",
